# mobilefpsboostmod

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/core/: Engine.cpp  Engine.h
app/src/main/cpp/hooks/: EGLHooks.cpp  EGLHooks.h  GLHooks.cpp  GLHooks.h
app/src/main/cpp/optimizer/: FramePacer.cpp  FramePacer.h  MemoryPool.cpp  MemoryPool.h  TextureCache.cpp  TextureCache.h
app/src/main/cpp/renderer/: GLInterceptor.cpp  GLInterceptor.h  RenderQueue.cpp  RenderQueue.h  VulkanRenderer.cpp  VulkanRenderer.h
app/src/main/cpp/utils/: Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h
app/src/main/java/com/mcoptimizer/jni/: NativeBridge.java  NativeBridge.kt
app/src/main/java/com/mcoptimizer/launcher/: GameInstaller.kt  LauncherActivity.java  LauncherActivity.kt  MainActivity.java  MainActivity.kt
app/src/main/java/com/mcoptimizer/optimizer/: MemoryManager.java  MemoryManager.kt  PerformanceMonitor.java  PerformanceMonitor.kt  RenderOptimizer.java  RenderOptimizer.kt
app/src/main/res/layout/: activity_launcher.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: BUILD.md
gradle/wrapper/: gradle-wrapper.properties
mod/: build.gradle  gradlew
mod/gradle/wrapper/: gradle-wrapper.properties
mod/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp  optimizer-native.cpp  optimizer-native.h
mod/src/main/java/com/mcoptimizer/mod/: FPSBoosterMod.java  PerformanceOptimizer.java
mod/src/main/java/com/mcoptimizer/mod/config/: ModConfig.java
mod/src/main/java/com/mcoptimizer/mod/mixin/: EntityRendererMixin.java  MinecraftMixin.java  WorldRendererMixin.java
mod/src/main/resources/: fabric.mod.json  mcoptimizer.mixins.json
mod/src/main/resources/assets/mcoptimizer/lang/: en_us.json
native/: vulkanlite.cpp
scripts/: build-debug.sh  build-release.sh  install-apk.sh  setup-ndk.sh  setup-project.sh
shell/: boost200.sh
src/main/java/com/rampurhat/mobileboost/: AfkFix.java  BoostAPI.java  MobileBoost.java  NativeBridge.java  SMPTweaks.java  ThermalControl.java  Ultra200Mode.java
src/main/java/com/rampurhat/mobileboost/mixin/: CameraMixin.java  EntityRendererMixin.java
src/main/resources/: fabric.mod.json  mobileboost.mixins.json
